# extended-data-library

./: .envrc  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  nx.json  package-lock.json  package.json  pyproject.toml  release-please-config.json  sonar-project.properties  tox.ini
.github/: copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/agentic-ci-resolution/: action.yml
.github/actions/agentic-issue-triage/: action.yml
.github/actions/agentic-pr-review/: action.yml
.github/workflows/: ai-curator.yml  ai-delegator.yml  ai-fixer.yml  ai-reviewer.yml  auto-merge.yml  automerge.yml  cd.yml  ci.yml  claude-code.yml  docs-push.yml  docs.yml  ecosystem-agents.yml  ecosystem-connector.yml  ecosystem-control.yml  ecosystem-delegator.yml  ecosystem-reviewer.yml  jules-supervisor.yml  nightly-improve.yml  ollama-pr-review.yml  pr-review.yml  project-sync.yml  release.yml
.ruler/: 03-ci-workflow.md  04-releases.md  05-development.md  AGENTS.md
docs/: .gitignore  Makefile  astro.config.mjs  conf.py  mcp_api.md  package.json  playwright.config.ts
docs/_static/: custom.css  jbcom-sphinx.css
docs/_templates/: docs-meta.html
docs/api/: index.md
docs/development/: contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: api-surface.md  composing-helpers.md  file-utilities.md  serialization.md  support-and-compatibility.md  transformations.md  workflow-recipes.md
docs/plans/: 2026-02-24-monorepo-migration-design.md  2026-04-16-remaining-work-prd.md
docs/sphinx/: conf.py  directed-inputs-class.md  extended-data-types.md  index.md  lifecyclelogging.md  vendor-connectors.md
docs/src/pages/: 404.astro
docs/src/styles/: custom.css
docs/tests/e2e/: docs.spec.ts
docs/tests/unit/: build.test.ts
examples/: README.md  basic_usage.py  file_operations.py  serialization.py  string_transformations.py
memory-bank/: activeContext.md
profile/: README.md
src/extended_data_types/: __init__.py  file_data_type.py  number_transformations.py  stack_utils.py  state_utils.py
src/extended_data_types/development_integration/: __init__.py  integration.py
src/extended_data_types/ecosystem_status/: __init__.py  monitor.py
src/extended_data_types/mcp_server/: __init__.py  cli.py  server.py
src/extended_data_types/package_discovery/: __init__.py  discovery.py
src/extended_data_types/release_coordination/: __init__.py  coordinator.py
tests/: __init__.py  test_base64_utils.py  test_ecosystem_foundation.py  test_file_data_type.py  test_integration_workflows.py  test_map_data_type.py  test_matcher_utils.py  test_mcp_server.py  test_state_utils.py  test_type_utils.py
tools/: sphinx-to-astro.sh
(+9 files in other folders)
