[project]
name = "extended-data-library"
version = "0.0.0"
description = "Extended Data Library monorepo"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jon Bogaty", email = "jon@jonbogaty.com" }]

[dependency-groups]
dev = [
    "extended-data-types[tests,mcp]",
    "lifecyclelogging[tests]",
    "directed-inputs-class[tests]",
    "vendor-connectors[tests,aws,google,github,slack,vault,anthropic,mcp]",
]

[tool.uv.sources]
extended-data-types = { workspace = true }
lifecyclelogging = { workspace = true }
directed-inputs-class = { workspace = true }
vendor-connectors = { workspace = true }

[tool.uv]
workspace = { members = [
    "packages/extended-data-types",
    "packages/lifecyclelogging",
    "packages/directed-inputs-class",
    "packages/vendor-connectors",
] }
required-version = ">=0.5.0"

# ── Shared tool configuration ─────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["packages/*/src", "packages/*/tests"]
exclude = ["docs", "packages/secretssync"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "ARG",
    "BLE001",
    "C901",
    "COM",
    "D105",
    "D205",
    "D415",
    "D417",
    "DTZ007",
    "E402",
    "E501",
    "EM",
    "ERA001",
    "FBT",
    "FIX",
    "G",
    "PERF",
    "PLC0415",
    "PLR0124",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW0603",
    "PTH",
    "RET505",
    "RUF012",
    "S105",
    "S110",
    "S310",
    "S603",
    "SLF001",
    "TCH",
    "TD",
    "TID252",
    "TRY003",
    "TRY300",
    "TRY301",
    "TRY401",
]

[tool.ruff.lint.per-file-ignores]
"packages/*/tests/*" = [
    "B018",
    "BLE",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "DTZ",
    "INP001",
    "LOG001",
    "N802",
    "N803",
    "PLC0415",
    "PLC1901",
    "PT",
    "RUF012",
    "S",
    "SIM117",
    "SIM300",
    "TRY",
]
"packages/*/tests/__init__.py" = ["D100", "D104", "D103"]
"**/examples/*" = [
    "D",
    "EXE001",
    "INP001",
    "S110",
    "SIM105",
    "T201",
]
"packages/vendor-connectors/src/**" = [
    "D101",
    "D102",
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
strict = true
pretty = true
show_error_codes = true
enable_error_code = ["ignore-without-code"]
ignore_missing_imports = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "packages.*.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "wrapt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "validators.*"
ignore_missing_imports = true
